working multi client

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,11 @@
 cmake_minimum_required(VERSION 3.5.0)
 
 project(MSG_Server)
-add_executable(MSG_Server MSG_Server/main.c)
+add_executable(MSG_Server
+    MSG_Server/main.c
+    MSG_Server/server.h
+    MSG_Server/server.c
+)
 
 project(MSG_Client)
 add_executable(MSG_Client MSG_Client/main.c)
